feat: add components

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -64,4 +64,14 @@
     font-family: 'Helvatica';
     src: url('../assets/fonts/Helvetica.otf');
   }
+
+  @font-face {
+    font-family: 'Heavy-Heap';
+    src: url('../assets/fonts/Heavy-Heap-rg.otf');
+  }
+  
+  @font-face {
+    font-family: 'Marker-Felt';
+    src: url('../assets/fonts/Marker-Felt.ttf');
+  }
 }
